fixes reposiveness and overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   left: 50%;
   top: 0;
   transform: translateX(-50%) rotate(180deg); /* Center horizontally and rotate 180 degrees */
-  width: 200%;
+  width: 100%;
   height: 100%;
   background-image: url('/images/bg.png');
   z-index: -1; /* Ensure it’s behind other content */
@@ -19,7 +19,7 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%) rotate(180deg); /* Center horizontally and rotate 180 degrees */
-  width: 200%;  
+  width: 100%;  
   height: 100%;
   background-color: rgba(20, 72, 53, .85); /* Semi-transparent overlay */
   z-index: 1; /* Ensure it’s on top of the red background but behind other content */
@@ -32,17 +32,17 @@
   color: white;
 }
 
-.hero::after {
+.hero::before {
   content: '';
   position: absolute;
-  bottom: -80px; /* Position it at the bottom of the parent */
-  left: 50%;
-  transform: translateX(-50%); /* Center horizontally */
-  width: 200%;
-  background-image: linear-gradient(to bottom, rgba(145, 145, 145, 0) 70%, #134737 30%);
-  height: 70%;
-  border-radius: 50%;
-  z-index: -1; /* Ensure it’s behind other content */
+  bottom:-80px; /* Position it at the bottom of the parent */
+  left: 0px;
+  transform: rotate(180deg); /* Center horizontally and rotate 180 degrees */
+  width: 100%;  
+  height: 20%;
+  background-color: rgba(20, 72, 53, 1); /* Semi-transparent overlay */
+  z-index: -1; /* Ensure it’s on top of the red background but behind other content */
+  clip-path: ellipse(60% 100% at 50% 100%);
 }
 
 .service-arc::after {
