--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,6 @@
 body{
     background-color: #f1f1f1;
     background-color: #ffffff;
-    overflow-x: hidden;
-    max-width: 100%;
 }
 
   /*--------------------------------------------------------------
